hero height updated

--- a/src/sections/home/Hero.astro
+++ b/src/sections/home/Hero.astro
@@ -2,7 +2,7 @@
   class:list={[
     "section-full",
     "bg-home-hero bg-no-repeat bg-center bg-cover",
-    "h-[calc(100vh-6rem)]",
+    "h-[calc(100vh-14rem)]",
   ]}
 >
   <div
@@ -15,7 +15,7 @@
   >
     <h1
       class:list={[
-        "absolute bottom-40",
+        "absolute top-1/3",
         "font-serif drop-shadow-lg",
         "max-w-96 lg:max-w-lg",
         "px-1 sm:px-4",
