hero height updated

--- a/src/sections/home/Hero.astro
+++ b/src/sections/home/Hero.astro
@@ -2,7 +2,7 @@
   class:list={[
     "section-full",
     "bg-home-hero bg-no-repeat bg-center bg-cover",
-    "h-[calc(100vh-14rem)]",
+    "h-[calc(70vh)]",
   ]}
 >
   <div
