about hero added

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Hero from "../sections/home/Hero.astro";
+import Hero from "../sections/about/Hero.astro";
 import Intro from "../sections/about/Intro.astro";
 ---
 
