gallery hero added

--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Hero from "../sections/home/Hero.astro";
+import Hero from "../sections/gallery/Hero.astro";
 import Flavors from "../sections/gallery/Flavors.astro";
 ---
 
