get in touch hero added

--- a/src/pages/get-in-touch.astro
+++ b/src/pages/get-in-touch.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Hero from "../sections/home/Hero.astro";
+import Hero from "../sections/get-in-touch/Hero.astro";
 import ContactForm from "../sections/get-in-touch/contact-form.astro";
 ---
 
