--- a/src/sections/home/Events.astro
+++ b/src/sections/home/Events.astro
@@ -8,7 +8,7 @@ const events = [
   {
     name: "Weddings",
     detail:
-      "In our bespoke catering service we blend the warmth of homemade flavors with the elegance of custom-designed menus to create unforgettable culinary experiences.",
+      "In our catering service we blend the warmth of homemade flavors with the elegance of custom-designed menus to create unforgettable culinary experiences.",
     moreDetails:
       "At La Chinacata, we understand that your wedding day is one of the most significant moments in your life, and we are dedicated to making it truly special.",
     image: wedding,
