changes requested applied

--- a/src/sections/home/Celebrations.astro
+++ b/src/sections/home/Celebrations.astro
@@ -11,7 +11,7 @@ const menus = [
   {
     name: "Brunch",
     detail:
-      "Start your weekend with a delicious traditional brunch or a mexican brunch with waffles, omelets and fresh fruit.",
+      "Enjoy a tasty traditional brunch or a Mexican brunch to kick off your weekend. Elevate your event  with a live omelette station or a chilaquiles cart.",
   },
   {
     name: "",
@@ -37,7 +37,7 @@ const menus = [
       "Liven up your party with casual food and appetizers that will keep your guests coming back for more.",
   },
   {
-    name: "Tropical Paradise",
+    name: "Italian Menu",
     detail:
       "Transport your guests to a Hawaiian oasis with  teriyaki chicken, and traditional hawaiian mac salad.",
   },
