--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -33,11 +33,11 @@ const links = [
       "gap-x-16",
     ]}
   >
-    <a href="/" class="flex items-center pb-5 lg:pb-0">
+    <a href="/" class="flex items-center pb-4 lg:pb-0">
       <Image
         src={logo}
         alt="La chinacata logo"
-        class="max-h-14 lg:max-h-none lg:w-full"
+        class="max-h-14 lg:max-h-none w-52 lg:w-full"
       />
     </a>
 
@@ -118,8 +118,8 @@ const links = [
       "font-serif text-5xl leading-4",
     ]}
   >
-    <a href="/" class="flex items-center">
-      <Image src={logo} alt="La chinacata logo" class="max-h-14" />
+    <a href="/" class="flex items-center pb-4">
+      <Image src={logo} alt="La chinacata logo" class="max-h-14 w-52" />
     </a>
 
     <div class:list={["cursor-pointer flex place-items-center"]}>
