--- a/src/sections/about/Intro.astro
+++ b/src/sections/about/Intro.astro
@@ -60,8 +60,8 @@ import family from "../../assets/about/family.png";
         alt="La Chinacata family"
         class:list={[
           "object-cover object-center on",
-          "border-l-2 border-t-4 border-green-leaf-800",
-          "rounded-tl-full rounded-bl-sm rounded-tr-full rounded-br-sm",
+          "border-r-2 border-t-4 border-green-leaf-800",
+          "rounded-tl-full rounded-bl-md rounded-tr-full rounded-br-md",
           "w-full",
         ]}
       />
