--- a/src/sections/home/Events.astro
+++ b/src/sections/home/Events.astro
@@ -17,18 +17,18 @@ const events = [
   {
     name: "Social",
     detail:
-      "This is some text for social events with the elegance of custom-designed menus to create unforgettable culinary experiences.",
-    moreDetails:
-      "At La Chinacata, we understand that your wedding day is one of the most significant moments in your life, and we are dedicated to making it truly special.",
+      "From birthdays to anniversaries, our social events are synonymous with joy and great taste. Our extensive experience allows us to adapt to any type of celebration, offering varied and delicious menus that will satisfy all palates.",
+    moreDetails: "",
+    // "At La Chinacata, we understand that your wedding day is one of the most significant moments in your life, and we are dedicated to making it truly special.",
     image: social,
     alt: "Fresh fruit table for quinceanera party.",
   },
   {
     name: "Corporate",
     detail:
-      "This is some text for corporate events with the warmth of homemade flavors with the elegance of custom-designed menus to create unforgettable culinary experiences.",
-    moreDetails:
-      "At La Chinacata, we understand that your wedding day is one of the most significant moments in your life, and we are dedicated to making it truly special.",
+      "Looking for a caterer to make your corporate events memorable? Our home-cooked cuisine will allow you to create a relaxed and productive environment where your employees and clients will feel valued and cared for. From coffee breaks to formal dinners, we offer customized culinary solutions for every occasion.",
+    moreDetails: "",
+    // "At La Chinacata, we understand that your wedding day is one of the most significant moments in your life, and we are dedicated to making it truly special.",
     image: corporate,
     alt: "Corporate brunch service with personalized menu.",
   },
@@ -58,10 +58,10 @@ const events = [
           src={event.image}
           alt={event.alt}
           class:list={[
-            "border-green-leaf-800 border-y-2 border-l-2 border-r-4",
-            "w-full",
+            "border-green-leaf-800 border-y-2 border-l-4 border-r-2",
             "object-cover place-self-center",
             "rounded-full",
+            "w-full",
           ]}
         />
 
@@ -92,7 +92,7 @@ const events = [
           src={event.image}
           alt={event.alt}
           class:list={[
-            "border-green-leaf-800 border-y-2 border-l-2 border-r-4",
+            "border-green-leaf-800 border-y-2 border-l-4 border-r-2",
             "w-full",
             "object-cover place-self-center",
             "rounded-full",
