--- a/src/sections/home/Celebrations.astro
+++ b/src/sections/home/Celebrations.astro
@@ -85,7 +85,7 @@ const menus = [
   <div
     class:list={[
       "grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 lg:grid-rows-5",
-      "gap-8 lg:gap-2 xl:gap-8",
+      "gap-8 lg:gap-2 xl:gap-6",
     ]}
   >
     {
@@ -93,7 +93,7 @@ const menus = [
         <article
           class:list={[
             "flex flex-col items-center",
-            "p-4",
+            "py-2.5 px-4",
             { hidden: index === 2 || index === 5 || index === 8 },
             "lg:first-of-type:col-span-3 lg:first-of-type:self-end",
             "lg:last-of-type:col-span-3",
@@ -102,7 +102,7 @@ const menus = [
           <h3
             class:list={[
               "cursor-pointer",
-              "font-serif font-semibold text-4xl text-center text-pretty text-green-leaf-800",
+              "font-serif font-semibold text-3xl xl:text-4xl text-center text-pretty text-green-leaf-800",
               "hover:text-carnation-400 hover:transition-colors hover:duration-75 hover:ease-linear",
             ]}
           >
@@ -111,8 +111,8 @@ const menus = [
           <p
             class:list={[
               "max-w-80",
-              "pt-5",
-              "font-sans font-light text-lg text-center text-pretty text-green-leaf-800",
+              "pt-3",
+              "font-sans font-light text-base xl:text-lg text-center text-pretty text-green-leaf-800",
             ]}
           >
             {menu.detail}
@@ -126,7 +126,7 @@ const menus = [
       class:list={[
         "lg:row-start-2 lg:col-start-2 lg:row-end-5",
         "hidden lg:block",
-        "border-green-leaf-800 border-y-2 border-l-2 border-r-4",
+        "border-green-leaf-800 border-t-4 border-b border-l-2 border-r-2",
         "lg:min-h-[80%] xl:min-h-[90%]",
         "object-cover rounded-full",
         "place-self-center",
