history section added

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,9 +2,11 @@
 import Layout from "../layouts/Layout.astro";
 import Hero from "../sections/about/Hero.astro";
 import Intro from "../sections/about/Intro.astro";
+import History from "../sections/about/History.astro";
 ---
 
 <Layout title="About us">
   <Hero />
   <Intro />
+  <History />
 </Layout>
